--- a/convert_table.Rmd
+++ b/convert_table.Rmd
@@ -16,6 +16,7 @@ library(data.table)
 ###load data
 ```{r}
 df_original <- fread('./compact.csv')
+str(df_original)   ### check each column data type
 df <- fread('./compact.csv')
 df[is.na(df)] <- "NULL"
 fwrite(df,'./compact_covert.csv')
